--- a/support/static/ngTemplates/app.support.showCountryDetails.modal.html
+++ b/support/static/ngTemplates/app.support.showCountryDetails.modal.html
@@ -9,4 +9,5 @@
   <li ng-if="locationInfo.location.languages">Languages :
     <span ng-repeat="lang in locationInfo.location.languages">{{lang.name}} </span>
   </li>
+  <a href="data.currentUrl" target="_blank">{{data.currentUrl}}</a>
 </ul>
