--- a/static_shared/ngTemplates/header.html
+++ b/static_shared/ngTemplates/header.html
@@ -45,7 +45,7 @@
   			  </ul>
   			</li>
   		</ul>
-      <ul class = "nav navbar-nav navbar-right" style="height:5vh;">
+      <ul class = "nav navbar-nav navbar-right" style="height:50px;">
         <li class="dropdown" style="height:100%;">
           <a ng-if="!isCustomer&&showCustomerIcons" class="dropdown-toggle" data-toggle="dropdown" style="width:55px;height:50px;text-align: center;" role="button" aria-haspopup="true" aria-expanded="false">
             <i class="fa fa-envelope-o fa-lg"></i>
