--- a/static_shared/ngTemplates/sideMenu.html
+++ b/static_shared/ngTemplates/sideMenu.html
@@ -25,7 +25,7 @@
     <div class="container-fluid">
       <ul class="nav nav-sidebar" style="width:102%;">
         <li ng-class="{active: $state.includes(a.state)}" ng-repeat="a in fixedItems" ng-mouseover="onHover=true" ng-mouseleave="onHover=false" style="padding:.3rem">
-          <a ui-sref="{{a.state}}" style="height:6rem;padding-top: 2rem;border-radius:.5rem;{{ onHover&&!sideMenuVisibility ? 'width:20rem;border-radius:0 3rem 3rem 0;' : ''}}">
+          <a ui-sref="{{a.state}}" style="height:4rem;padding-top: 1rem;border-radius:.5rem;{{ onHover&&!sideMenuVisibility ? 'width:20rem;border-radius:0 3rem 3rem 0;' : ''}}">
             <!-- <div ng-if="sideMenuVisibility" align="left">
               <div class="row container-fluid">
                 <div style="display:flex;">
@@ -67,7 +67,7 @@
     </div>
   </div>
 
-  <ul class="nav nav-sidebar" style="width:100%;position:absolute; bottom:1rem; cursor:pointer ">
+  <ul class="nav nav-sidebar" style="width:100%;position:absolute; bottom:.5rem; cursor:pointer ">
     <li ng-mouseover="onHover1=true" ng-mouseleave="onHover1=false" style="padding:.3rem">
       <a href="/logout" style="height:6rem;padding-top: 2rem;border-radius:.5rem;">
         <div ng-if="sideMenuVisibility" align="left">
