--- a/homepage/static/ngTemplates/app.homepage.signin.html
+++ b/homepage/static/ngTemplates/app.homepage.signin.html
@@ -30,11 +30,11 @@
       <div class="alert alert-{{form.errorType}}" ng-if="form.errorMessage.length>0">{{form.errorMessage}}</div>
       <div class="login-input-group form-group">
         <label>Phone Number</label>
-        <input type="tel" class="form-control" required="" ng-focus="slideDown()" placeholder="+91" maxlength="10" ng-model='form.number'>
+        <input type="tel" class="form-control" required="" ng-focus="slideDown()" placeholder="+91" maxlength="10" ng-model='form.number' ng-enter="loginFunction()">
         <div class="help-block" ng-if="!form.otpmode">Enter a valid phone number</div>
       </div>
       <div class="login-input-group form-group" ng-if="form.otpmode">
-        <input type="text" class="form-control" placeholder="Enter OTP" ng-model='form.otp'>
+        <input type="text" class="form-control" placeholder="Enter OTP" ng-model='form.otp' ng-enter="loginFunction()">
       </div>
       <button type="button" class="btn_gradient form-control" style="padding-bottom:30px;" ng-click="loginFunction()">
         LOGIN
