--- a/ERP/static/ngTemplates/app.ERP.settings.default.html
+++ b/ERP/static/ngTemplates/app.ERP.settings.default.html
@@ -36,7 +36,7 @@
                 <span ng-if="blog.contentType=='book'"><i class="fa fa-book fa-lg"></i></span><span ng-if="blog.contentType=='article'"><i class="fa fa-newspaper-o fa-lg"></i></span><span ng-if="blog.contentType=='course'"><i class="fa fa-laptop fa-lg"></i></span><span ng-if="blog.contentType=='paperGroup'"><i class="fa fa-file-pdf-o fa-lg"></i></span> &nbsp;{{blog.contentType|humanize}}</th>
               <td>{{blog.title}}</td>
               <td>{{blog.description}}</td>
-              <td>{{blog.shortUrl}}</td>
+              <td> <a target="_blank" href="/{{blog.shortUrl}}/"></a> </td>
               <td><span ng-if="blog.ogimage"><img ng-src="{{blog.ogimage}}" alt="Article Image" style="height:70px;width:70px"></span><span ng-if="blog.ogimageUrl&&blog.ogimageUrl!='null'"><a href="{{blog.ogimageUrl}}" target="_blank">{{blog.ogimageUrl}}</a></span></td>
               <td><i class="fa fa-pencil fa-2x" ng-click="editObject('blog',$index,'#dbda97')" style="cursor:pointer"></i></td>
             </tr>
@@ -61,7 +61,7 @@
               <td>Class {{sub.level}}</td>
               <td>{{sub.title}}</td>
               <td>{{sub.description}}</td>
-              <td>class-{{sub.level}}-{{sub.title}}</td>
+              <td> <a href="/class-{{sub.level}}-{{sub.title}}/" target="_blank"></a> </td>
               <td><span ng-if="sub.dp"><img ng-src="{{sub.dp}}" alt="Subject DP" style="height:70px;width:70px"></span></td>
               <td><i class="fa fa-pencil fa-2x" ng-click="editObject('subject',$index,'#c7e79f')" style="cursor:pointer"></i></td>
             </tr>
@@ -83,7 +83,7 @@
             <tr ng-repeat="sec in SectionData">
               <td>{{sec.seoTitle}}</td>
               <td>{{sec.description}}</td>
-              <td>{{sec.shortUrl}}</td>
+              <td> <a href="/{{sec.shortUrl}}/" target="_blank"></a> </td>
               <td><i class="fa fa-pencil fa-2x" ng-click="editObject('section',$index,'#e7b89f')" style="cursor:pointer"></i></td>
             </tr>
           </tbody>
@@ -105,7 +105,7 @@
             <tr ng-repeat="notes in notesData">
               <td>{{notes.title}}</td>
               <td>{{notes.description}}</td>
-              <td>{{notes.urlSuffix}}</td>
+              <td> <a href="/{{notes.urlSuffix}}/" target="_blank"></a> </td>
               <td><span ng-if="notes.image"><img ng-src="{{notes.image}}" alt="Subject DP" style="height:70px;width:70px"></span></td>
               <td><i class="fa fa-pencil fa-2x" ng-click="editObject('notes',$index,'#9fe7df')" style="cursor:pointer"></i></td>
             </tr>
