paper group url was corrected

--- a/homepage/static/ngTemplates/examsubmit.html
+++ b/homepage/static/ngTemplates/examsubmit.html
@@ -52,7 +52,7 @@
     </div>
   </div>
   <div class="text-center" style="margin-top:18em;" >
-    <a href="/testresults"><button class="savebtn" style="width:20%;" ng-click="submit()"> Submit</button></a>
+    <button class="savebtn" style="width:20%;" ng-click="submit()"> Submit</button>
     <button class="btnaction" style="width:20%;" ng-click="closeModal()">Cancel</button>
   </div>
 </div>
