--- a/homepage/static/ngTemplates/startexam.html
+++ b/homepage/static/ngTemplates/startexam.html
@@ -5,7 +5,7 @@
   </div>
 
   <div class="text-center" style="font-size:18px;margin:1em 0;">
-    <a ng-click="next()" ng-href="{{url}}"><button class="savebtn" ><b>Yes</b> </button></a>
+    <button class="savebtn" ng-click="next()"><b>Yes</b> </button>
     <button class="btnaction" ng-click="closeModal()"><b>No</b></button>
   </div>
 </div>
