--- a/support/static/ngTemplates/app.qualityCheck.html
+++ b/support/static/ngTemplates/app.qualityCheck.html
@@ -101,7 +101,7 @@
                       <div class="Right_container">
                         <div class="container-fluid" style="position:fixed;background-color:#f0f0f0;height:100vh;padding:2rem;right:0;width:35rem;top:5vh">
                           <div style="display:block;margin:1rem 0px;">
-                            <button type="button" class="btn btn-block btn-warning" ng-click="setMyView()" style="outline:none">
+                            <button type="button" class="btn btn-block btn-primary" ng-click="setMyView()" style="outline:none">
                                <i ng-if="!isTableView"class="fa fa-table fa-md"  aria-hidden="true">
                                  <span>Switch to Table View</span>
                                </i>
@@ -235,7 +235,7 @@
                   <div class="col-sm-3" >
                      <div class="container-fluid" style="position:fixed;background-color:#f0f0f0;height:100vh;padding:2rem;right:0;width:18%;top:5vh">
                        <div style="display:block;margin:10px 0px;">
-                         <button type="button" class="btn btn-block btn-warning" ng-click="setMyView()" style="outline:none">
+                         <button type="button" class="btn btn-block btn-primary" ng-click="setMyView()" style="outline:none">
                             <i ng-if="!isTableView"class="fa fa-table fa-md"  aria-hidden="true">
                               <span>Switch to Table View</span>
                             </i>
@@ -384,7 +384,7 @@
                     <div class="Right_container">
                       <div class="container-fluid" style="position:fixed;background-color:#f0f0f0;height:100vh;padding:2rem;right:0;width:35rem;top:5vh">
                         <div style="display:block;margin:1rem 0px;">
-                          <button type="button" class="btn btn-block btn-warning" ng-click="setMyView()" style="outline:none">
+                          <button type="button" class="btn btn-block btn-primary" ng-click="setMyView()" style="outline:none">
                              <i ng-if="!isTableView"class="fa fa-table fa-md"  aria-hidden="true">
                                <span>Switch to Table View</span>
                              </i>
@@ -515,7 +515,7 @@
                 <div class="col-sm-3" >
                    <div class="container-fluid" style="position:fixed;background-color:#f0f0f0;height:100vh;padding:2rem;right:0;width:35rem;top:5vh">
                      <div style="display:block;margin:10px 0px;">
-                       <button type="button" class="btn btn-block btn-warning" ng-click="setMyView()" style="outline:none">
+                       <button type="button" class="btn btn-block btn-primary" ng-click="setMyView()" style="outline:none">
                           <i ng-if="!isTableView"class="fa fa-table fa-md"  aria-hidden="true">
                             <span>Switch to Table View</span>
                           </i>
