2nd commit 5th feb

--- a/homepage/static/ngTemplates/accountsDetails.html
+++ b/homepage/static/ngTemplates/accountsDetails.html
@@ -12,12 +12,12 @@
             </div>
             <div class="row" style="margin-top:30px;">
               <div class="col-xs-6" style="padding-left:30px;padding-right:30px;">
-                <div class="card container-fluid text-muted" style="border-radius:10px;">
+                <div class="card container-fluid text-muted card_mob" style="border-radius:10px;">
                   <span style="font-size:60px;">{{form.hours1}}</span>
                 </div>
               </div>
               <div class="col-xs-6" style="padding-left:30px;padding-right:30px;">
-                <div class="card container-fluid text-muted" style="border-radius:10px;">
+                <div class="card container-fluid text-muted card_mob" style="border-radius:10px;">
                   <span style="font-size:60px;">{{form.hours2}}</span>
                 </div>
               </div>
@@ -34,12 +34,12 @@
             </div>
             <div class="row" style="margin-top:30px;">
               <div class="col-xs-6" style="padding-left:30px;padding-right:30px;">
-                <div class="card container-fluid text-muted" style="border-radius:10px;">
+                <div class="card container-fluid text-muted card_mob" style="border-radius:10px;">
                   <span style="font-size:60px;">{{form.minutes1}}</span>
                 </div>
               </div>
               <div class="col-xs-6" style="padding-left:30px;padding-right:30px;">
-                <div class="card container-fluid text-muted" style="border-radius:10px;">
+                <div class="card container-fluid text-muted card_mob" style="border-radius:10px;">
                   <span style="font-size:60px;">{{form.minutes2}}</span>
                 </div>
               </div>
@@ -48,10 +48,10 @@
         </div>
         <div class="row text-center" style="padding-top:30px;">
           <div class="col-md-4 col-md-offset-2">
-            <button type="button" class="btn_gradient" ng-click="startSession()">START A SESSION</button>
+            <button type="button" class="btn_gradient btn_g" ng-click="startSession()">START A SESSION</button>
           </div>
           <div class="col-md-4 col-md-offset-2">
-            <button type="button" class="btn_gradient" ng-click="addHours()">ADD MORE TIME</button>
+            <button type="button" class="btn_gradient btn_g" ng-click="addHours()">ADD MORE TIME</button>
           </div>
         </div>
         <div class="row text-center" style="border-bottom:1px solid #e0e0e0; padding-top:30px;">
