--- a/support/static/ngTemplates/app.qualityCheck.explore.html
+++ b/support/static/ngTemplates/app.qualityCheck.explore.html
@@ -130,6 +130,8 @@
         <p ng-if="visitorDetails.email"><strong>Visitor's Email : </strong>{{visitorDetails.email}}</p>
         <p ng-if="visitorDetails.name"><strong>Visitor's Name : </strong>{{visitorDetails.name}}</p>
         <p ng-if="visitorDetails.phoneNumber"><strong>Visitor's Number : </strong>{{visitorDetails.phoneNumber}}</p>
+        <p><strong>Company: </strong>{{myChatThreadData.companyName}}</p>
+        <p ><strong>Visitor's Uid : </strong>{{myChatThreadData.uid}}</p>
         <p><strong>Device IP : </strong>{{msgData.userDeviceIp}}</p>
         <p style="font-size:15px" ng-if="msgData.customerRating"><strong>Rating : </strong>{{msgData.customerRating}} <i class="fa fa-star fa-md" aria-hidden="true"></i></p>
         <p style="font-size:15px" ng-if="msgData.customerFeedback"><strong>Feedback : </strong>{{msgData.customerFeedback}}</p>
