--- a/static_shared/ngTemplates/reviewInfoQC.html
+++ b/static_shared/ngTemplates/reviewInfoQC.html
@@ -31,8 +31,10 @@
       </div>
       <div class="col-md-6">
         <p ng-if="msgData.customerRating"><strong><i class="fa fa-star fa-md" aria-hidden="true"></i> </strong>{{msgData.customerRating}} </p>
+        <p><strong>Company : </strong>{{myChatThreadData.companyName}}</p>
         <p ng-if="visitorDetails.email"><strong>Visitor's Email : </strong>{{visitorDetails.email}}</p>
         <p ng-if="visitorDetails.name"><strong>Visitor's Name : </strong>{{visitorDetails.name}}</p>
+        <p ><strong>Visitor's Uid : </strong>{{myChatThreadData.uid}}</p>
         <p ng-if="msgData.location.city"><i class="fa fa-globe" aria-hidden="true"></i> {{msgData.location.city}} , {{msgData.location.country_name}}</p>
       </div>
 
