--- a/homepage/static/ngTemplates/accountsDetails.html
+++ b/homepage/static/ngTemplates/accountsDetails.html
@@ -108,8 +108,8 @@
         </div>
         <div class="row text-center">
           <div class="btn-group">
-            <a href="/logout" type="button" class="btn btn-danger" style="margin:0px;float:right;padding:0.9em 2em;border-top-right-radius:25px !important">LOGOUT</a>
-            <button type="button" class="btn_gradient" ng-click="editProfile()" style="margin:0px;border-radius:0px;border-top-left-radius:25px">EDIT PROFILE</button>
+            <a href="/logout" type="button" class="btn btn-danger" style="margin:0px;float:right;padding:0.933em 2em;border-bottom-right-radius:7px !important;border-top-right-radius:25px !important">LOGOUT</a>
+            <button type="button" class="btn_gradient" ng-click="editProfile()" style="margin:0px;border-radius:0px;border-bottom-left-radius:7px !important;border-top-left-radius:25px">EDIT PROFILE</button>
           </div>
         </div>
       </div>
