user assign error fixed

--- a/static_shared/ngTemplates/chatBox.html
+++ b/static_shared/ngTemplates/chatBox.html
@@ -24,7 +24,7 @@
             <i class="fa fa-pencil " style="cursor:pointer;" aria-hidden="true" ng-click="editUserDetails(data.uid)" title="Edit Details"></i>
           </div>
           <div class="col-md-2 " style="padding:0px;font-size:20px;text-align:center;border-radius:1px">
-            <i class="fa fa-cog " style="cursor:pointer;" aria-hidden="true" ng-click="openDynamicFuncModal(data.uid)" title="Edit Details"></i>
+            <i class="fa fa-cog " style="cursor:pointer;" aria-hidden="true" ng-click="showCountryDetails(data.uid)" title="Edit Details"></i>
           </div>
 
       </div>
