--- a/support/static/ngTemplates/app.support.showCountryDetails.modal.html
+++ b/support/static/ngTemplates/app.support.showCountryDetails.modal.html
@@ -10,5 +10,5 @@
   <li ng-if="locationInfo.location.languages">Languages :
     <span ng-repeat="lang in locationInfo.location.languages">{{lang.name}} </span>
   </li>
-  <a href="data.currentUrl" target="_blank">{{data.currentUrl}}</a>
+    <li ng-if="currentUrl">Active On : <a href="{{currentUrl}}" target="_blank">{{currentUrl}}</a> </li>
 </ul>
