--- a/static_shared/ngTemplates/newChatBox.html
+++ b/static_shared/ngTemplates/newChatBox.html
@@ -67,8 +67,7 @@
     <iframe id="iframeChat{{data.uid}}" ng-src="{{data.videoUrl | trusted}}" scrolling="no" style="height:100%; transition:0.5s;width:100%; border:1px solid #e0e0e0;" allow="geolocation; microphone; camera;"  autoplay="true" allowfullscreen></iframe>
     <!-- <iframe ng-src="{{data.currentUrl | trusted}}" scrolling="no" style="height:100%; transition:0.5s;width:100%; border:1px solid #e0e0e0;" allowFullScreen></iframe> -->
   </div>
-  <div ng-if="data.audio&&!data.closeIframe" class="container-fluid" style="height:3.5vh; padding:0px;" ng-init="setHeight()">
-
+  <div ng-if="data.audio&&!data.closeIframe" class="row" style="height:5.5vh; padding:0px; margin:0px;" ng-init="setHeight()">
     <iframe id="iframeChat{{data.uid}}" ng-src="{{data.audioUrl | trusted}}" scrolling="no" style="height:100%; width:100%; border:1px solid #e0e0e0;"></iframe>
   </div>
 
@@ -84,7 +83,7 @@
       <div class="row container-fluid" style="font-size:14px;">
         <div ng-if="!message.logs" style="float:{{message.sentByAgent ? 'right; background-color:#E4E5E9; ':'left; background-color:#DDF7C8;'}} padding:10px;margin:8px;border-radius:{{message.sentByAgent ? '20px 0px 20px 20px':'0px 20px 20px 20px'}}; {{message.is_hidden ? 'background-color:#5252e3 !important; color:#fff;!important':''}} max-width:92%;">
           <p ng-if="message.message.length>0 && message.attachmentType!='youtubeLink'" style="word-wrap: break-word !important; white-space: pre-wrap; "> <span ng-bind-html="(message.message | linkInText)"></span></p>
-          <img ng-if="message.attachmentType == 'image' ||message.attachmentType == 'instructionImage'" ng-src="{{message.attachment}}" ng-click="imageClicked(message.attachment)" style="width:100%;">
+          <img ng-if="message.attachmentType == 'image' ||message.attachmentType == 'instructionImage'" ng-src="{{message.attachment}}" ng-click="imageClicked(message.attachment)" style="width:100%; min-height:10px;">
           <video ng-if="message.attachmentType == 'video'" width="280" height="240" ng-src="{{message.attachment}}" controls></video>
           <audio ng-if="message.attachmentType == 'audio'" ng-src="{{message.attachment}}" controls></audio>
 
