forum backend done

--- a/LMS/static/ngTemplates/app.LMS.forum.html
+++ b/LMS/static/ngTemplates/app.LMS.forum.html
@@ -1,34 +1,23 @@
+
 <breadcrumb></breadcrumb>
 <div class="container-fluid">
   <uib-tabset>
-    <uib-tab>
+    <uib-tab active="searchTabActive">
       <uib-tab-heading>
-        ForumThread <i class="fa fa-commenting" aria-hidden="true"></i>
+      ForumThread <i class="fa fa-commenting" aria-hidden="true"></i>
       </uib-tab-heading>
-      <generic-Table data="data.tableData" config-Obj="{{config}}" callback-Fn="tableAction"></generic-Table>
+      <div class="container-fluid">
+        <generic-Table data="data.tableData" config-Obj="{{config}}"></generic-Table>
       </div>
     </uib-tab>
-      <uib-tab active="searchTabActive">
+      <uib-tab>
           <uib-tab-heading>
             ForumComment
             <i class="fa fa-comments" aria-hidden="true"></i>
           </uib-tab-heading>
           <div class="container-fluid">
-              <generic-Table data="data.tableData1" config-Obj="{{config1}}" callback-Fn="tableAction1"></generic-Table>
+            <generic-Table data="data.tableData1" config-Obj="{{config1}}" ></generic-Table>
           </div>
       </uib-tab>
-<!-- 
-      <uib-tab ng-repeat="tab in tabs" active="tab.active" disable="tab.disabled">
-          <uib-tab-heading >
-              {{tab.title}}
-              <i ng-if="tab.cancel" class="fa fa-close" ng-click="closeTab($index);"></i>
-          </uib-tab-heading>
-          <div ng-if="tab.app == 'paperEditor'">
-              <div ng-include="'/static/ngTemplates/app.LMS.evaluation.form.html'"></div>
-          </div>
-          <div ng-if="tab.app == 'paperExplorer'">
-              <div ng-include="'/static/ngTemplates/app.LMS.evaluation.explore.html'"></div>
-          </div>
-      </uib-tab> -->
   </uib-tabset>
 </div>
