working on  papergroup

--- a/LMS/static/ngTemplates/app.LMS.evaluation.paper.group.html
+++ b/LMS/static/ngTemplates/app.LMS.evaluation.paper.group.html
@@ -12,7 +12,8 @@
       </div>
     </div>
     <div class="container-fluid">
-        <i class="fa fa-pencil pull-right" style="cursor:pointer;" ng-click="rowActionClicked('edit')"></i>
+        <i class="fa fa-pencil fa-lg" style="cursor:pointer;" ng-click="rowActionClicked('edit')"></i>
+        <i class="fa fa-info-circle pull-right fa-lg" style="cursor:pointer;" ng-click="rowActionClicked('details')"></i>
     </div>
   </div>
 
