--- a/ecommerce/static/ngTemplates/app.ecommerce.account.orders.item.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.account.orders.item.html
@@ -24,7 +24,7 @@
         <div class="col-md-6  hidden-sm hidden-xs">
           <i class="fa fa-info fa-2x" style="cursor:pointer;" ng-click="rowActionClicked('toggleInfo')"></i>
         </div>
-        <div class="col-md-6  hidden-sm hidden-xs">
+        <div class="col-md-6  hidden-sm hidden-xs" ng-if="data.status=='ordered' || data.status=='completed'">
           <!-- <button type="button" name="button" class="btn btn-success" > Cancel </button> -->
           <a href="/api/ecommerce/downloadInvoice/?value={{data.pk}}" target="_blank"><button style="width:140px" class="btn btn-primary pull-right"><i class="fa fa-download "></i> Invoice</button></a>
         </div>
@@ -51,7 +51,7 @@
         <div class="col-xs-6 col-sm-6 hidden-md hidden-lg">
           <i class="fa fa-info fa-2x" style="cursor:pointer;" ng-click="rowActionClicked('toggleInfo')"></i>
         </div>
-        <div class="col-xs-6 col-sm-6 hidden-md hidden-lg">
+        <div class="col-xs-6 col-sm-6 hidden-md hidden-lg" ng-if="data.status=='ordered' || data.status=='completed'">
           <!-- <button type="button" name="button" class="btn btn-success" > Cancel </button> -->
           <a href="/api/ecommerce/downloadInvoice/?value={{data.pk}}" target="_blank"><i class="fa fa-download fa-2x "></i> </a>
         </div>
